Package config. Library version as a project ver
Signed-off-by: Viktar Lukashonak <myxabeer@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -238,7 +238,7 @@ install_headers(h_O_files, subdir: 'cava/output')
 pkg = import('pkgconfig')
 pkg.generate(libraries: cava_lib,
              subdirs: ['cava', 'cava/input', 'cava/output'],
-             version: '0.9.1',
+             version: meson.project_version(),
              name: 'libcava',
              filebase: 'cava',
              description: 'A cava library')
